# kelly-criterion

./: .dockerignore  .pylintrc  Dockerfile  LICENSE  README.md  kelly-criterion.py  kelly_criterion.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
kelly_criterion/: __init__.py  kelly_criterion.py
tests/: test_kelly_criterion.py
