[metadata]
name = kelly_criterion
summary = Kelly Criterion Calculator
description-file =
    README.md
author = Tibor Kiss
author-email = tibor.kiss@gmail.com
home-page = https://github.com/kelly-direct/kelly-criterion
classifiers =
    Development Status :: 6 - Mature
    Programming Language :: Python :: 2.7
    Operating System :: OS Independent
    Topic :: Office/Business :: Financial :: Investment
keywords = kelly-criterion kelly money-management

[entry_points]
console_scripts =
    kelly_criterion = kelly_criterion.kelly_criterion:main


[files]
packages =
  kelly_criterion

[options]
zip_save = False

[pbr]
warnerrors = True

[bdist_wheel]
universal = 1

[tool:pytest]
collect_ignore = ['setup.py']